# MemChain

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: README.md  minimal_dialogue.jsonl  toy_dialogue.jsonl
memchain/: __init__.py  ablations.py  framework.py  heuristics.py  metrics.py  policy_io.py  prompts.py  retriever.py  schema.py
memchain/data/benchmarks/: base.py
memchain/intentmem/: ablations.py  framework.py  heuristics.py  metrics.py  policy_io.py  prompts.py  retriever.py  reward.py  schema.py
memchain/llm/: base.py  openai_client.py  vllm_client.py
memchain/memory_pool/: intent_guided.py
scripts/: build_memory_pool.py  run_heuristic_policy.py
tests/: test_core.py
